--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
+# Node dependencies
+node_modules/
+frontend/node_modules/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Python bytecode / caches
+**/__pycache__/
+*.pyc
+
+# IDE/OS
+.vscode/
+.idea/
+.DS_Store
+Thumbs.db
+
+# Unused backend storage copy (real storage is ../storage)
+backend_py/storage/
 # Logs
 logs
 *.log
